<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/onPrimary"
	android:padding="20dp"
	android:transitionName="transition_registration"
	tools:context=".RegistratioinStep2Activity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@color/transparent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<ImageView
				android:id="@+id/registration1_img_back"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_back"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:paddingLeft="-15dp"
				app:tint="@color/primary"
				android:transitionName="transition_back_arrow_btn" />

			<ImageView
				android:id="@+id/reg1_logo"
				android:layout_width="wrap_content"
				android:layout_height="50dp"
				app:layout_constrainedWidth="true"
				app:layout_constraintWidth_percent="0.2"
				android:src="@drawable/ic_logo"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:transitionName="transition_logo" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<TextView
			android:id="@+id/reg1_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:text="@string/registration"
			style="@style/TextHeader.Primary"
			android:transitionName="transition_title_text"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/gender"
				android:textAppearance="@style/TextViewPrimary"
				android:textColor="@color/primary" />


			<RadioGroup
				android:id="@+id/radio_group"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_gravity="center"
				android:layout_marginTop="15dp"
				android:orientation="horizontal">

					<androidx.constraintlayout.widget.ConstraintLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingHorizontal="30dp">

					<RadioButton
						android:id="@+id/male"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:checked="false"
						android:button="@color/transparent"
						android:text="@string/gender_m"
						android:textAppearance="@style/TextEdite"
						android:textColor="@color/primaryLite"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						android:onClick="onRadioButtonClick"
						android:background="@drawable/selector_r_btn"/>


					<RadioButton
						android:id="@+id/female"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:checked="false"
						android:button="@color/transparent"
						android:text="@string/gender_f"
						android:textColor="@color/primaryLite"
						android:textAppearance="@style/TextEdite"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toStartOf="@+id/others"
						app:layout_constraintStart_toEndOf="@+id/male"
						app:layout_constraintTop_toTopOf="parent"
						android:onClick="onRadioButtonClick"
						android:background="@drawable/selector_r_btn"/>


					<RadioButton
						android:id="@+id/others"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:checked="true"
						android:button="@color/transparent"
						android:text="@string/gender_o"
						android:textColor="@color/onPrimary"
						android:textAppearance="@style/TextEdite"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						android:onClick="onRadioButtonClick"
						android:background="@drawable/selector_r_btn"/>
				</androidx.constraintlayout.widget.ConstraintLayout>
			</RadioGroup>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:text="@string/dob"
				android:textAppearance="@style/TextViewPrimary"
				android:textColor="@color/primary" />

			<DatePicker
				android:id="@+id/age_picker"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:calendarTextColor="@color/primary"
				android:calendarViewShown="false"
				android:datePickerMode="spinner"
				android:spinnersShown="true"
				android:theme="@style/DatePickerDOB" />

			<Button
				android:id="@+id/registration1_btn_next"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/shape_btn_main"
				android:backgroundTint="@color/primary"
				android:text="@string/next_step"
				android:textAppearance="@style/Btn.Secondary"
				android:layout_gravity="center"
				android:layout_marginTop="40dp"
				android:transitionName="transition_registration"
				android:onClick="callNextSigupScreen"
				/>

			<Button
				android:id="@+id/registration1_btn_login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:layout_gravity="center"
				android:background="@color/transparent"
				android:text="@string/already_have_acc"
				android:textAppearance="@style/TextEdite"
				android:textColor="@color/primary"
				android:transitionName="transition_reg_btn_login"
				android:onClick="callLoginFromSignUp"
				/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>