<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/onPrimary"
	android:padding="20dp"
	android:transitionName="transition_registration"
	tools:context=".RegistratioinStep3Activity">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@color/transparent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<ImageView
				android:id="@+id/registration1_img_back"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_back"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:paddingLeft="-15dp"
				app:tint="@color/primary"
				android:transitionName="transition_back_arrow_btn" />

			<ImageView
				android:id="@+id/reg1_logo"
				android:layout_width="wrap_content"
				android:layout_height="50dp"
				app:layout_constrainedWidth="true"
				app:layout_constraintWidth_percent="0.2"
				android:src="@drawable/ic_logo"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:transitionName="transition_logo" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<TextView
			android:id="@+id/reg1_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:text="@string/registration"
			style="@style/TextHeader.Primary"
			android:transitionName="transition_title_text"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:orientation="vertical">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/login"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				app:boxStrokeColor="@color/primary"
				app:boxStrokeWidthFocused="2dp"
				app:boxCornerRadiusBottomEnd="15dp"
				app:boxCornerRadiusBottomStart="15dp"
				app:boxCornerRadiusTopEnd="15dp"
				app:boxCornerRadiusTopStart="15dp"
				app:errorTextColor="@color/red"
				app:boxStrokeErrorColor="@color/red"
				app:errorIconTint="@color/red"
				android:hint="@string/login"
				android:textColorHint="@color/primaryLite"
				app:startIconDrawable="@drawable/ic_userlogin"
				app:startIconTint="@color/primaryLite"
				app:endIconMode="clear_text"
				app:endIconTint="@color/primaryLite">
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/registration_input_login"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					style="@style/TextEdite"
					android:inputType="text"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				app:boxStrokeColor="@color/primary"
				app:boxStrokeWidthFocused="2dp"
				app:boxCornerRadiusBottomEnd="15dp"
				app:boxCornerRadiusBottomStart="15dp"
				app:boxCornerRadiusTopEnd="15dp"
				app:boxCornerRadiusTopStart="15dp"
				app:errorTextColor="@color/red"
				app:boxStrokeErrorColor="@color/red"
				app:errorIconTint="@color/red"
				android:hint="@string/email"
				android:textColorHint="@color/primaryLite"
				app:startIconDrawable="@drawable/ic_email"
				app:startIconTint="@color/primaryLite"
				app:endIconMode="clear_text"
				app:endIconTint="@color/primaryLite">
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/registration_input_email"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					style="@style/TextEdite"
					android:inputType="textEmailAddress"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				app:boxStrokeColor="@color/primary"
				app:boxStrokeWidthFocused="2dp"
				app:boxCornerRadiusBottomEnd="15dp"
				app:boxCornerRadiusBottomStart="15dp"
				app:boxCornerRadiusTopEnd="15dp"
				app:boxCornerRadiusTopStart="15dp"
				app:errorTextColor="@color/red"
				app:boxStrokeErrorColor="@color/red"
				app:errorIconTint="@color/red"
				android:hint="@string/password"
				android:textColorHint="@color/primaryLite"
				app:startIconDrawable="@drawable/ic_lock"
				app:startIconTint="@color/primaryLite"
				app:endIconMode="password_toggle"
				app:endIconTint="@color/primaryLite" >
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/reg_input_password"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					style="@style/TextEdite"
					android:inputType="textPassword"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/repeat_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				app:boxStrokeColor="@color/primary"
				app:boxStrokeWidthFocused="2dp"
				app:boxCornerRadiusBottomEnd="15dp"
				app:boxCornerRadiusBottomStart="15dp"
				app:boxCornerRadiusTopEnd="15dp"
				app:boxCornerRadiusTopStart="15dp"
				android:hint="@string/repeat_password"
				android:textColorHint="@color/primaryLite"
				app:startIconDrawable="@drawable/ic_lock"
				app:errorTextColor="@color/red"
				app:boxStrokeErrorColor="@color/red"
				app:errorIconTint="@color/red"
				app:startIconTint="@color/primaryLite"
				app:endIconMode="password_toggle"
				app:endIconTint="@color/primaryLite" >
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/reg_input_repeat_password"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					style="@style/TextEdite"
					android:inputType="textPassword"/>
			</com.google.android.material.textfield.TextInputLayout>

			<CheckBox
				android:id="@+id/remember_me"
				style="@style/Widget.AppCompat.CompoundButton.CheckBox"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:layout_centerVertical="true"
				android:buttonTint="@color/primary"
				android:text="@string/remember_me"
				android:textAppearance="@style/TextEdite"
				android:textColor="@color/primary"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<Button
				android:id="@+id/registration1_btn_next"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/shape_btn_main"
				android:backgroundTint="@color/primary"
				android:text="@string/reg_complete"
				android:textAppearance="@style/Btn.Secondary"
				android:layout_gravity="center"
				android:layout_marginTop="40dp"
				android:transitionName="transition_registration"
				android:onClick="completeRegistration"
				/>

			<Button
				android:id="@+id/registration1_btn_login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:layout_gravity="center"
				android:background="@color/transparent"
				android:text="@string/already_have_acc"
				android:textAppearance="@style/TextEdite"
				android:textColor="@color/primary"
				android:transitionName="transition_reg_btn_login"
				android:onClick="callLoginFromSignUp"
				/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>