<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/onPrimary"
	android:padding="20dp"
	android:transitionName="transition_registration"
	tools:context=".RegistrationActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@color/transparent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<ImageView
				android:id="@+id/registration1_img_back"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_back"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:paddingLeft="-15dp"
				app:tint="@color/primary"
				android:transitionName="transition_back_arrow_btn" />

			<ImageView
				android:id="@+id/reg1_logo"
				android:layout_width="wrap_content"
				android:layout_height="50dp"
				app:layout_constrainedWidth="true"
				app:layout_constraintWidth_percent="0.2"
				android:src="@drawable/ic_logo"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:transitionName="transition_logo" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<TextView
			android:id="@+id/reg1_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:text="@string/registration"
			style="@style/TextHeader.Primary"
			android:transitionName="transition_title_text"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:orientation="vertical">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/second_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				app:boxStrokeColor="@color/primary"
				app:boxStrokeWidthFocused="2dp"
				app:boxCornerRadiusBottomEnd="15dp"
				app:boxCornerRadiusBottomStart="15dp"
				app:boxCornerRadiusTopEnd="15dp"
				app:boxCornerRadiusTopStart="15dp"
				app:errorTextColor="@color/red"
				app:boxStrokeErrorColor="@color/red"
				app:errorIconTint="@color/red"
				android:hint="@string/second_name"
				android:textColorHint="@color/primaryLite"
				app:endIconMode="clear_text"
				app:endIconTint="@color/primaryLite">
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/registration_input_second_name"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					style="@style/TextEdite"
					android:inputType="text"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/name"
				android:layout_width="match_parent"
				android:layout_marginTop="20dp"
				android:layout_height="wrap_content"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				app:boxStrokeColor="@color/primary"
				app:boxStrokeWidthFocused="2dp"
				app:boxCornerRadiusBottomEnd="15dp"
				app:boxCornerRadiusBottomStart="15dp"
				app:boxCornerRadiusTopEnd="15dp"
				app:boxCornerRadiusTopStart="15dp"
				app:errorTextColor="@color/red"
				app:boxStrokeErrorColor="@color/red"
				app:errorIconTint="@color/red"
				android:hint="@string/name"
				android:textColorHint="@color/primaryLite"
				app:endIconMode="clear_text"
				app:endIconTint="@color/primaryLite">
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/registration_input_name"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					style="@style/TextEdite"
					android:inputType="text"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/patronymic"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				app:boxStrokeColor="@color/primary"
				app:boxStrokeWidthFocused="2dp"
				app:boxCornerRadiusBottomEnd="15dp"
				app:boxCornerRadiusBottomStart="15dp"
				app:boxCornerRadiusTopEnd="15dp"
				app:boxCornerRadiusTopStart="15dp"
				app:errorTextColor="@color/red"
				app:boxStrokeErrorColor="@color/red"
				app:errorIconTint="@color/red"
				android:hint="@string/patronymic"
				android:textColorHint="@color/primaryLite"
				app:endIconMode="clear_text"
				app:endIconTint="@color/primaryLite">
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/registration_input_patronymic"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					style="@style/TextEdite"
					android:inputType="text"/>
			</com.google.android.material.textfield.TextInputLayout>

			<Button
				android:id="@+id/registration1_btn_next"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/shape_btn_main"
				android:backgroundTint="@color/primary"
				android:text="@string/next_step"
				android:textAppearance="@style/Btn.Secondary"
				android:layout_gravity="center"
				android:layout_marginTop="40dp"
				android:transitionName="transition_registration"
				android:onClick="callNextSigupScreen"
				/>

			<Button
				android:id="@+id/registration1_btn_login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:layout_gravity="center"
				android:background="@color/transparent"
				android:text="@string/already_have_acc"
				android:textAppearance="@style/TextEdite"
				android:textColor="@color/primary"
				android:transitionName="transition_reg_btn_login"
				android:onClick="callLoginFromSignUp"
				/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>