<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/onPrimary"
	android:padding="20dp"
	android:transitionName="transition_login"
	tools:context=".LoginActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@color/transparent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<ImageView
				android:id="@+id/login_img_back"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:src="@drawable/ic_back"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:paddingLeft="-15dp"
				app:tint="@color/primary"/>

			<ImageView
				android:id="@+id/login_logo"
				android:layout_width="wrap_content"
				android:layout_height="50dp"
				app:layout_constrainedWidth="true"
				app:layout_constraintWidth_percent="0.2"
				android:src="@drawable/ic_logo"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:transitionName="transition_logo"></ImageView>
		</androidx.constraintlayout.widget.ConstraintLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:text="@string/autorisation"
			style="@style/TextHeader.Primary" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:orientation="vertical">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/login"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				app:boxStrokeColor="@color/primary"
				app:boxStrokeWidthFocused="2dp"
				app:boxCornerRadiusBottomEnd="15dp"
				app:boxCornerRadiusBottomStart="15dp"
				app:boxCornerRadiusTopEnd="15dp"
				app:boxCornerRadiusTopStart="15dp"
				app:errorTextColor="@color/red"
				app:boxStrokeErrorColor="@color/red"
				app:errorIconTint="@color/red"
				android:hint="@string/login"
				android:textColorHint="@color/primaryLite"
				app:startIconDrawable="@drawable/ic_userlogin"
				app:startIconTint="@color/primaryLite"
				app:endIconMode="clear_text"
				app:endIconTint="@color/primaryLite">
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/login_input_login"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					style="@style/TextEdite"
					android:inputType="text"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				app:boxStrokeColor="@color/primary"
				app:boxStrokeWidthFocused="2dp"
				app:boxCornerRadiusBottomEnd="15dp"
				app:boxCornerRadiusBottomStart="15dp"
				app:boxCornerRadiusTopEnd="15dp"
				app:boxCornerRadiusTopStart="15dp"
				app:errorTextColor="@color/red"
				app:boxStrokeErrorColor="@color/red"
				app:errorIconTint="@color/red"
				android:hint="@string/password"
				android:textColorHint="@color/primaryLite"
				app:startIconDrawable="@drawable/ic_lock"
				app:startIconTint="@color/primaryLite"
				app:endIconMode="password_toggle"
				app:endIconTint="@color/primaryLite" >
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/login_input_password"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					style="@style/TextEdite"
					android:inputType="textPassword"/>
			</com.google.android.material.textfield.TextInputLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp">

				<CheckBox
					android:id="@+id/remember_me"
					style="@style/Widget.AppCompat.CompoundButton.CheckBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:buttonTint="@color/primary"
					android:text="@string/remember_me"
					android:textAppearance="@style/TextEdite"
					android:textColor="@color/primary"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<Button
					android:id="@+id/login_btn_forget_password"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@color/transparent"
					android:text="@string/forget_password"
					android:textAppearance="@style/TextEdite"
					android:textColor="@color/primary"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			</androidx.constraintlayout.widget.ConstraintLayout>

			<Button
				android:id="@+id/login_btn_login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/shape_btn_main"
				android:backgroundTint="@color/primary"
				android:text="@string/autorisation"
				android:textAppearance="@style/Btn.Secondary"
				android:layout_gravity="center"
				android:layout_marginTop="40dp"
				android:transitionName="transition_login"
				android:onClick="completeLogin"/>

			<Button
				android:id="@+id/login_btn_registration"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:layout_gravity="center"
				android:background="@color/transparent"
				android:text="@string/create_acc"
				android:textAppearance="@style/TextEdite"
				android:textColor="@color/primary"
				android:onClick="callRegistrationFromLogin"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>